--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -43,7 +43,7 @@ body {
 	color: #eee;
 	margin: auto;
 	padding: 15px;
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 .logo {
 	font-size: 0;
@@ -51,48 +51,8 @@ body {
 	display: flex;
 	flex: none;
 	align-items: center;
+	
 }
-.logo:before,
-.logo:after {
-	content: '';
-	display: block;
-}
-.logo:before {
-	background: #222;
-	width: 50px;
-	height: 50px;
-	margin: 0 10px 0 20px;
-	border-radius: 50%;
-}
-.logo:after {
-	background: #222;
-	width: 90px;
-	height: 30px;
-}
-.nav {
-	margin: -5px 0 0 -5px;
-	display: -webkit-flex;
-	display: flex;
-	flex-wrap: wrap;
-}
-.nav-itm {
-	background: #222;
-	width: 130px; 
-	height: 50px;
-	font-size: 1.5rem;
-	color: #eee;
-	text-decoration: none;
-	margin: 5px 0 0 5px;
-	display: -webkit-flex;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.categories-grid {
-    max-width: 800px;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
+.logo__logo {
+width: 200px;
 }
