--- a/css/categories-grid.css
+++ b/css/categories-grid.css
@@ -1,9 +1,22 @@
 @import "globalStyle.css";
 
 .categories-grid {
-    max-width: 800px;
+    max-width: 960px;
     display: flex;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
+}
+.categories-grid__category {
+    width: 270px;
+    height: 270px;
+    background: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.pic-of-category {
+    max-width: 240px;
+    max-height: 200px;
 }
