--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -54,5 +54,25 @@ body {
 	
 }
 .logo__logo {
-width: 200px;
+	width: 200px;
+}
+.header-elements{
+	margin: -5px 0 0 -5px;
+	display: -webkit-flex;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+}
+.header-elements__Element{
+	background: #222;
+	width: 130px; 
+	height: 50px;
+	font-size: 1.5rem;
+	color: #eee;
+	text-decoration: none;
+	margin: 5px 0 0 5px;
+	display: -webkit-flex;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
