--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -43,7 +43,8 @@ body {
 	color: #eee;
 	margin: auto;
 	padding: 15px;
-    box-sizing: border-box;
+	box-sizing: border-box;
+	text-align: center;
 }
 .logo {
 	font-size: 0;
@@ -62,6 +63,7 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
+	box-sizing: border-box;
 }
 .header-elements__Element{
 	background: #222;
@@ -71,8 +73,15 @@ body {
 	color: #eee;
 	text-decoration: none;
 	margin: 5px 0 0 5px;
-	display: -webkit-flex;
-	display: flex;
 	justify-content: center;
-	align-items: center;
+}
+.header-elements__Search {
+	background: #222;
+	width: 260px; 
+	height: 50px;
+	font-size: 1.5rem;
+	color: #eee;
+	text-decoration: none;
+	margin: 5px 0 0 5px;
+	justify-content: center;
 }
