--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -11,9 +11,9 @@ body {
 	margin: 0;
 	padding: 0 15px;
 	display: -webkit-flex;
-	display: flex;
+	 display: flex; 
 	flex-direction: column;
-	flex: auto;
+	flex: auto; 
 }
 .header {
 	width: 100%;
@@ -29,10 +29,14 @@ body {
 }
 .main {
 	width: 100%;
+	height: 100%;
 	max-width: 960px;
 	min-width: 430px;
 	margin: auto;
+	display: flex;
 	flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
 	box-sizing: border-box;
 }
 .footer {
