--- a/css/categories-grid.css
+++ b/css/categories-grid.css
@@ -2,6 +2,7 @@
 
 .categories-grid {
     max-width: 960px;
+    min-height: 100%;
     display: flex;
     justify-content: center;
     align-content: center;
