--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -13,7 +13,8 @@ body {
 	display: -webkit-flex;
 	 display: flex; 
 	flex-direction: column;
-	flex: auto; 
+	flex: auto;
+	min-height: 100%;
 }
 .header {
 	width: 100%;
@@ -29,7 +30,7 @@ body {
 }
 .main {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	max-width: 960px;
 	min-width: 430px;
 	margin: auto;
