--- a/css/order-form.css
+++ b/css/order-form.css
@@ -1,5 +1,6 @@
 @import "globalStyle.css";
 .order-form{
+    min-height: 100%;
     max-width: 960px;
     display: flex;
     justify-content: center;
@@ -14,4 +15,5 @@ font-size: 1.5rem;
 color: #eee;
 text-decoration: none;
 margin: 5px 0 0 5px;
-justify-content: center;}
+justify-content: center;
+}
