--- a/css/item-cart.css
+++ b/css/item-cart.css
@@ -1,1 +1,34 @@
 @import "globalStyle.css";
+.main {
+    justify-content: space-around;
+}
+.slider{
+    width: 400px;
+    height: 400px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.slider__main-slide {
+margin: auto;
+max-width: 100%;
+max-height: 100%;
+}
+.name-of-good{
+    display: inline-block;
+    margin-top: 1.5em;
+}
+.quantity {
+    width:30px;
+}
+.slider__small-slide{
+    width:20px;
+    height: 20px;
+    margin-bottom:-5px;
+}
+.good-information{
+    min-width: 80px;
+    max-width: 400px;
+}
