--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -1,6 +1,14 @@
+input {
+    background-color: aqua;
+    color: blueviolet;
+}
+button{         
+    background-color:  blueviolet;
+    color:rgb(218, 218, 218);
+}
 
 html {
-	background: #ccc;
+	background: skyblue;
 	min-height: 100%;
 	font-family: sans-serif;
 	display: -webkit-flex;
@@ -44,12 +52,12 @@ body {
 .footer {
 	background: #222;
 	width: 100%;
-	max-width: 960px;
+	max-width: 100%;
 	min-width: 430px;
 	color: #eee;
 	margin: auto;
-	padding: 15px;
 	text-align: center;
+	margin-top: 20px;
 }
 .logo {
 	font-size: 0;
@@ -113,5 +121,15 @@ body {
 	color: #0000cc;
 	display: none;
 	flex-direction: column;
-  }
-  #register:target {display: flex;}
+}
+#register:target {display: flex;}
+#popup-container {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index:1001;
+	background-color: aquamarine;
+	border-radius: 10px;
+	padding: 1px;
+}
