--- a/css/order-form.css
+++ b/css/order-form.css
@@ -2,18 +2,48 @@
 .order-form{
     min-height: 100%;
     max-width: 960px;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
+    position: relative;
+    background-image: url('/pics/order-form/cards.png');
+
 }
 .order-form__form {
-background: #222;
 
+background: #222;
 height: 50px;
 font-size: 1.5rem;
 color: #eee;
 text-decoration: none;
 margin: 5px 0 0 5px;
 justify-content: center;
+}
+
+.order-creditcard__back-side{
+    position: absolute;
+    margin:auto;
+    left: 330px;
+	padding: 15px;
+	border: 3px solid black;
+	border-radius: 10px;
+    background: #222;
+    min-width: 450px;
+    height: 300px;
+    text-align: right;
+}
+.order-creditcard__front-side{
+    position: absolute;
+    top: 100px;
+	padding: 15px;
+	border: 3px solid black;
+	border-radius: 10px;
+    background: white;
+    min-width: 450px;
+    height: 300px;
+    text-align: right;
+}
+.order-form__button{
+    position: absolute;
+    top:350px;
+    left: 700px;
+    
+
 }
