--- a/css/shiping-address.css
+++ b/css/shiping-address.css
@@ -24,7 +24,7 @@
     display:flex;
     flex-direction: column;
     width: 100%;
-    align-items: flex-end
+    align-items: flex-end;
     
 }
 .submit-button {
