--- a/css/item-cart.css
+++ b/css/item-cart.css
@@ -1,6 +1,8 @@
 @import "globalStyle.css";
 .main {
     justify-content: space-around;
+    background-color: aliceblue;
+    padding-bottom: 30px;
 }
 .slider{
     width: 400px;
