--- a/css/categories-grid.css
+++ b/css/categories-grid.css
@@ -4,25 +4,19 @@
     max-width: 960px;
     min-height: 100%;
     display: flex;
-    justify-content: center;
-    align-content: center;
+    justify-content: space-between;
+    align-content: space-between;
     flex-wrap: wrap;
+    background-color: aliceblue
 }
 .categories-grid__category {
     width: 270px;
     height: 270px;
-    background: white;
+    background: aliceblue;
     display: flex;
     flex-direction: column;
     text-align: center;
-}
-.categories-grid__category {
-    width: 270px;
-    height: 270px;
-    background: white;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    margin-bottom: 5%;
 }
 .pic-of-category {
     margin: auto;
