--- a/css/item-grid.css
+++ b/css/item-grid.css
@@ -47,7 +47,11 @@
     max-height: 200px;
 }
 .live-veiw{
-    margin:auto;
+    display: block;
+    max-width: 960px;
+    text-align: right;
+    margin: auto;
+
 }
 .good-in-list{
     display: flex;
