--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -27,7 +27,7 @@ body {
 .header {
 	width: 100%;
 	max-width: 960px;
-	min-width: 430px;
+	min-width: 320px;
 	margin: 0 auto 30px;
 	padding: 30px 0 10px;
 	display: -webkit-flex;
@@ -37,10 +37,9 @@ body {
 	box-sizing: border-box;
 }
 .main {
-	width: 100%;
 	min-height: 100%;
 	max-width: 960px;
-	min-width: 430px;
+	min-width: 320px;
 	margin: auto;
 	display: flex;
 	flex-grow: 1;
@@ -99,13 +98,14 @@ body {
 	justify-content: center;
 }
 #login {
-	margin:auto;
+
 	padding: 15px;
 	border: 3px solid black;
 	border-radius: 10px;
 	color: #0000cc;
 	display: none;
 	flex-direction: column;
+
   }
   #login:target {display: flex;}
 .x{
@@ -114,22 +114,30 @@ body {
 	margin:5px;
 }
 #register {
-	margin:auto;
+	
 	padding: 15px;
 	border: 3px solid black;
 	border-radius: 10px;
 	color: #0000cc;
 	display: none;
 	flex-direction: column;
+
 }
-#register:target {display: flex;}
+#register:target {
+	display: flex;
+}
 #popup-container {
-	position: absolute;
+	position: fixed;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
 	z-index:1001;
 	background-color: aquamarine;
 	border-radius: 10px;
-	padding: 1px;
+	transition: width 2s, height 5s, background-color 2s, transform 2s
+	
 }
+#popup-container:hover {
+	transform: scale(1.5, 1.5) translate(-25%, -25%);
+}
+
