--- a/css/item-cart.css
+++ b/css/item-cart.css
@@ -5,7 +5,7 @@
     padding-bottom: 30px;
 }
 .slider{
-    width: 400px;
+    max-width: 400px;
     height: 400px;
     background: white;
     display: flex;
