--- a/css/items-list.css
+++ b/css/items-list.css
@@ -1,10 +1,14 @@
 @import "globalStyle.css";
 .widget {
-    position: absolute;
-    left: 0;
-    padding: 20px 30px;
+    /* position: absolute; */
+    /* left: 0; */
+    display: flex;
+    flex-direction: column;
+    padding: 10px 10px;
     background: white;
-
+    max-width: 10%;
+    min-width: 150px;
+    
 }
 .widget-title {
     letter-spacing: 2px;
@@ -12,7 +16,7 @@
     font-size: 16px;
     padding-left: 15px;
     margin-bottom: 15px;
-    border-left: 2px solid #b99d61;
+    border-left: 2px solid black;
 }
 .widget-list {
     padding: 0;
@@ -38,20 +42,41 @@
     max-height: 200px;
 }
 .live-veiw{
-    margin:auto;
+    margin-right:auto;
 }
 .good-in-list{
     display: flex;
     flex-direction: row;
-    max-width: 70%;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    word-wrap: wrap;
 }
 .good-name-and-cost{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    word-wrap: wrap;
 }
 .NameOfGood{
     display:inline-block;
+}
+#content {
+    display:flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    width: 100%;
+}
+.ShortDescriptionOfGoodInList {
+    word-wrap: warp;
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes mymove {
+    from {top: 0px;}
+    to {top: 200px;}
+}
+/* Standard syntax */
+@keyframes mymove {
+    from {top: 0px;}
+    to {top: 200px;}
 }
