--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -4,7 +4,13 @@ input {
 }
 button{         
     background-color:  blueviolet;
-    color:rgb(218, 218, 218);
+	color:rgb(218, 218, 218);
+
+}
+button:hover{
+	animation-name: mymove;
+	animation-duration: 4s;
+	animation-iteration-count: infinite;
 }
 
 html {
@@ -54,9 +60,9 @@ body {
 	max-width: 100%;
 	min-width: 430px;
 	color: #eee;
-	margin: auto;
+	margin-top: auto;
+	margin-bottom: 0;
 	text-align: center;
-	margin-top: 20px;
 }
 .logo {
 	font-size: 0;
@@ -105,6 +111,7 @@ body {
 	color: #0000cc;
 	display: none;
 	flex-direction: column;
+	
 
   }
   #login:target {display: flex;}
@@ -125,6 +132,7 @@ body {
 }
 #register:target {
 	display: flex;
+	
 }
 #popup-container {
 	position: fixed;
@@ -134,10 +142,62 @@ body {
 	z-index:1001;
 	background-color: aquamarine;
 	border-radius: 10px;
-	transition: width 2s, height 5s, background-color 2s, transform 2s
+	transition: width 2s, height 5s, background-color 2s, transform 2s;
+
 	
 }
-#popup-container:hover {
-	transform: scale(1.5, 1.5) translate(-25%, -25%);
+#popup-container:hover{
+	transform: scale(1.5, 1.5) translate(-33%, -33%);
+}
+/* Standard syntax */
+@keyframes mymove {
+    0% {background-color: hotpink}
+	50% {background-color: blueviolet}
+	100% {background-color: hotpink}
 }
 
+.widget {
+    /* position: absolute; */
+    /* left: 0; */
+    display: flex;
+    flex-direction: column;
+    padding: 10px 10px;
+    background: white;
+    max-width: 10%;
+    min-width: 150px;
+    
+}
+.widget-title {
+    letter-spacing: 2px;
+    color: #222;
+    font-size: 16px;
+    padding-left: 15px;
+    margin-bottom: 15px;
+    border-left: 2px solid black;
+}
+.widget-list {
+    padding: 0;
+    list-style: none;
+}
+  .widget-list a:before {
+    margin-right: 14px;
+}
+  .widget-list a {
+    text-decoration: none;
+    outline: none;
+    display: block;
+    padding: 6px 0; 
+    letter-spacing: 1px;
+    font-weight: 300;
+    color: #444;
+    transition: .3s linear;
+}
+.widget-list a:hover {color: #b99d61;}
+
+#content {
+    display:flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    width: 100%;
+    min-height: 100%;
+}
