started to do scss and bem, categories-grid finished

--- a/css/item-grid.css
+++ b/css/item-grid.css
@@ -1,6 +1,7 @@
 @import "globalStyle.css";
 .main{
-    justify-content: space-around;}
+    justify-content: space-around;
+}
     
 .good-in-grid{
     display: flex;
