--- a/styles/blocks/categories-grid/categories-grid.scss
+++ b/styles/blocks/categories-grid/categories-grid.scss
@@ -5,7 +5,8 @@
     justify-content: space-between;
     align-content: space-between;
     flex-wrap: wrap;
-    background-color: aliceblue;
+    background-color: white;
+    border-radius: 5px;
         @include element('category') {
             margin-bottom: 5%;
         }
