--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,3 +13,6 @@
 @import "blocks/login-form/login-form";
 @import "blocks/registration-form/registration-form";
 @import "blocks/content/content";
+@import "blocks/good/good";
+@import "blocks/goods-in-cart/goods-in-cart";
+@import "blocks/slider/slider";
