item card finished

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,3 +16,6 @@
 @import "blocks/good/good";
 @import "blocks/goods-in-cart/goods-in-cart";
 @import "blocks/slider/slider";
+@import "blocks/name-of-good/name-of-good";
+@import "blocks/cost-block/cost-block";
+@import "blocks/social-networks/social-networks";
