--- a/styles/blocks/slider/slider.scss
+++ b/styles/blocks/slider/slider.scss
@@ -1,18 +1,20 @@
 .slider{
     max-width: 400px;
-    height: 400px;
+    min-width: 300px;
     background: white;
     display: flex;
     flex-direction: column;
     text-align: center;
+    box-sizing: border-box;
+    margin-right: 10px;
     @include element('main-slide') {
         margin: auto;
         max-width: 100%;
         max-height: 100%;           
-    }
+    };
     @include element('small-slide') {
-        width:20px;
+        width:20px; 
         height: 20px;
         margin-bottom:-5px;
-    }
-}
+    }  
+} 
