--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,3 +19,6 @@
 @import "blocks/name-of-good/name-of-good";
 @import "blocks/cost-block/cost-block";
 @import "blocks/social-networks/social-networks";
+@import "blocks/address/address.scss";
+@import "blocks/addresses/addresses.scss";
+@import "blocks/addresses-form/addresses-form";
