order form fixed withou responsive

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,3 +22,6 @@
 @import "blocks/address/address.scss";
 @import "blocks/addresses/addresses.scss";
 @import "blocks/addresses-form/addresses-form";
+@import "blocks/creditcard/creditcard";
+@import "blocks/front-side/front-side";
+@import "blocks/back-side/back-side";
