--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,7 +16,6 @@
 @import "blocks/good/good";
 @import "blocks/goods-in-cart/goods-in-cart";
 @import "blocks/slider/slider";
-@import "blocks/name-of-good/name-of-good";
 @import "blocks/cost-block/cost-block";
 @import "blocks/social-networks/social-networks";
 @import "blocks/address/address.scss";
@@ -26,3 +25,5 @@
 @import "blocks/front-side/front-side";
 @import "blocks/back-side/back-side";   
 @import "blocks/change-view/change-view";   
+@import "blocks/widget/widget";
+@import "blocks/good-in-grid/good-in-grid";
