--- a/styles/variable.scss
+++ b/styles/variable.scss
@@ -8,3 +8,4 @@ $border-radius : 10px;
 $standart-button-margin : 5px;
 $standart-button-padding : $standart-button-margin;
 $text-decoration-none : none;
+$dislay-popup: none;
