--- a/styles/blocks/main/main.scss
+++ b/styles/blocks/main/main.scss
@@ -11,4 +11,7 @@
 	flex-wrap: wrap;
 	padding-bottom: 30px; 
 	flex: 1;
+	justify-content: space-around;
+	align-content: space-around;
+	background-color: white;
 }
