--- a/styles/blocks/popup/popup.scss
+++ b/styles/blocks/popup/popup.scss
@@ -1,23 +1,35 @@
 .popup{
-	position: fixed;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	z-index:1001;
-	background-color: #03dac6;
-	border-radius: $border-radius;
-	transition: width 2s, height 5s, background-color 2s, transform 2s;
-	@include modifier('zoom-popup') {
-		@include zoom-popup;
-	}
+	@media screen and (min-width: 768px) {
+		display:hidden;
+		position: fixed;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		z-index:1001;
+		border-radius: $border-radius;
+		transition: width 2s, height 5s, background-color 2s, transform 2s;
+		@include modifier('zoom-popup') {
+			@include zoom-popup;
+		}
+	};
+	@media screen and (max-width: 768px) {
+		position: fixed;
+		width: 100%;
+		height: 100vh;
+		border: 0px;
+		box-sizing: border-box;
+	};
+	
 	@include element('login-form') {
 		display: none;
+		background-color: $secondary-color;
 		@include modifier('show-popup') {
 			@include show-popup;
-		};
+		}
 	};
 	@include element('registration-form') {
 		display: none;
+		background-color: $secondary-color;
 		@include show-popup;
 	};
 	@include element('x') {
@@ -26,8 +38,13 @@
 		color: black;
 		text-decoration: none;
 		@include modifier('responsive-element') {
-		 	@include responsive-element;
+			 @include responsive-element;
+
 		};
+		@media screen and (max-width: 768px) {
+			justify-self: flex-start;
+			margin: 0;
+		}
 	};
 	@include element('form-element') {
 		margin: $standart-button-margin;
