--- a/styles/blocks/widget/widget.scss
+++ b/styles/blocks/widget/widget.scss
@@ -7,16 +7,36 @@
     background: white;
     max-width: 10%;
     min-width: 150px;
-        @include element('title') {
-            letter-spacing: 2px;
-            color: #222;
-            font-size: 16px;
-            padding-left: 15px;
-            margin-bottom: 15px;
-            border-left: 2px solid black;
-        }
-        @include element('list') {
-            padding: 0;
-            list-style: none;
-        }
+    flex: 1;
+    @include element('title') {
+        letter-spacing: 2px;
+        color: #222;
+        font-size: 16px;
+        padding-left: 15px;
+        margin-bottom: 15px;
+        border-left: 2px solid black;
+    }
+    @include element('list') {
+        padding: 0;
+        list-style: none;
+    }
+    @include element('link') {
+        text-decoration: none;
+        outline: none;
+        display: block;
+        padding: 6px 0; 
+        letter-spacing: 1px;
+        font-weight: 300;
+        color: #444;
+        transition: .3s linear;
+        @include modifier('behover') {
+            @include meta-tag('before') {
+                margin-right: 14px;
+            }
+            @include meta-tag('hover') {
+                color: #b99d61;
+                cursor: pointer;
+            }
+        } 
+    }
 }
