--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -8,9 +8,25 @@
         @content;
     } 
 } 
+@mixin meta-tag($meta-tag) {
+    &:#{$meta-tag} {
+        @content;
+    }
+}
+
 @mixin show-popup {
     &:target {
         display: flex;
+        @media screen and (max-width: 768px) {
+            position: absolute;
+            width: 97%;
+            height: 100%;
+            border: 0px;
+            box-sizing: border-box;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            };
     };
 }
 @mixin zoom-popup {
