--- a/styles/blocks/back-side/back-side.scss
+++ b/styles/blocks/back-side/back-side.scss
@@ -9,4 +9,7 @@
     min-width: 300px;
     height: 200px;
     text-align: right;
+    @media screen and (max-width: 768px) {
+        position: static;
+    }
 }
