--- a/styles/blocks/category/category.scss
+++ b/styles/blocks/category/category.scss
@@ -18,6 +18,7 @@
     @include modifier('good-size') {
         width: 200px;
         height: 200px;
+        padding-bottom: $standart-button-padding*5;
     }
     @include modifier('direction'){
         flex-direction: row;
