--- a/styles/blocks/creditcard/creditcard.scss
+++ b/styles/blocks/creditcard/creditcard.scss
@@ -1,9 +1,18 @@
 .creditcard  {
-    transform: translate(-50%, -0%);
+    @media screen and (min-width: 768px) {
+        position: static;
+    transform: translate(-30%, -0%);
+    height: 100%;
+    width: 100%;
+    }
     @include element("credit-card-submit") {
         position: absolute;
         top:300px;
         left: 370px;
+        @media screen and (max-width: 768px) {
+            position: static;
+        }
+
         @include modifier('responsive-element') {
             @include responsive-element;
         }
