--- a/styles/blocks/front-side/front-side.scss
+++ b/styles/blocks/front-side/front-side.scss
@@ -8,4 +8,7 @@
     min-width: 300px;
     height: 200px;
     text-align: right;
+    @media screen and (max-width: 768px) {
+        position: static;
+    }
 } 
