--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,8 +10,8 @@
 @import "blocks/logo/logo";
 @import "blocks/popup/popup";
 @import "blocks/search/search";
-@import "blocks/login-form/login-form";
-@import "blocks/registration-form/registration-form";
+// @import "blocks/login-form/login-form";
+// @import "blocks/registration-form/registration-form";
 @import "blocks/content/content";
 @import "blocks/good/good";
 @import "blocks/goods-in-cart/goods-in-cart";
