--- a/styles/blocks/main/main.scss
+++ b/styles/blocks/main/main.scss
@@ -2,7 +2,7 @@
 	min-height: 100%;
 	max-width: 1600px;
 	min-width: 270px;
-	margin: auto;
+	margin: 0 auto;
 	display: flex;
 	flex-grow: 1;
     flex-shrink: 1;
