added remove, started to do ES6 translation

--- a/styles/blocks/popup/popup.scss
+++ b/styles/blocks/popup/popup.scss
@@ -1,6 +1,6 @@
 .popup {
 	position: fixed;
-	display:hidden;
+	// display:hidden;
 	z-index:1001;
 	@media screen and (min-width: 768px) {
 		left: 50%;
